[package]
name = "xdp-knapsack"
version = "0.1.0"
edition = "2021"
authors = ["Yehor Smoliakov"]
license = "MIT"
description = "Experimental 0/1 knapsack implementations in Rust focused on optimized XDP approximations and heuristics."
repository = "https://github.com/RustedBytes/xdp-knapsack"
homepage = "https://github.com/RustedBytes/xdp-knapsack"

[dependencies]
rayon = "1.10" 

rand = "0.8"
rand_pcg = "0.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
